# myocaml

./: .gitignore  .ocamlinit  Makefile  README.md  dune  dune-project  myocaml.opam  myocaml.opam.locked
acstor_cli/: acstor_cli.ml  dune
acstor_cli/documents/: test_acstorv2.md
acstor_cli/yaml-files/: cert-manager-values.yaml  cns-values.yaml  statefulset.yaml  storagepool.yaml
dev-tools.locks/ocaml-lsp-server/: lock.dune
dev-tools.locks/ocamlformat/: lock.dune
learn_programming_with_ocaml/ch01/: ch01.ml  draw_curve.ml  dune  find_prime.ml  leap_year.ml  logo_turtle.ml  monte_carlo.ml
lib/: dune
parser_combinator/: dune  statefulset.ml
play/: dune  play.ml
real_world_ocaml/ch01/: dune
real_world_ocaml/ch01_guided_tour/: ch01.ml
real_world_ocaml/ch02/: ch02.ml  dune
real_world_ocaml/ch02_variables_and_functions/: ch02.ml
real_world_ocaml/ch03/: ch03.ml
real_world_ocaml/ch03_lists_and_patterns/: ch03.ml  dune
real_world_ocaml/ch04/: ch04.ml  counter.ml  counter_v2.ml  counter_v3.ml  couter_v3.mli  demo_nested_module.ml  dune  freq.ml  import.ml
real_world_ocaml/ch04_files_modules_and_programs/: ch04.ml  counter_v2.mli  demo_nested_module.ml  dune  ext_option.ml
real_world_ocaml/ch05/: ch05.ml  demo04.ml  dune
real_world_ocaml/ch05_records/: demo01.ml  demo02.ml  demo03.ml  demo04.ml  dune
real_world_ocaml/ch06_variants/: ch06.ml  demo01.ml  demo02.ml  demo03.ml  demo04.ml  demo05.ml  demo06.ml  dune
real_world_ocaml/ch07_error_handling/: ch07.ml  demo01.ml  demo02_bind.ml  demo03_exception.ml  dune
real_world_ocaml/ch08_imperative/: demo01.ml  dune
real_world_ocaml/ch09_gadt/: ch09.ml  demo01.ml  demo02.ml  demo03.ml  demo04.ml  demo05.ml  demo06.ml  dune
real_world_ocaml/ch10_functors/: demo01.ml  demo02.ml  demo03.ml  demo04.ml  dune
real_world_ocaml/ch11_first_class_module/: ch11.ml  dune  query_handling.ml
real_world_ocaml/ch14/: ch14.ml  dune  maps.ml  sets.ml
real_world_ocaml/ch14_set_map_and_hashtable/: dune  hashtables.ml  maps.ml
real_world_ocaml/ch15_command_line_parsing/: args.ml  ch15.ml  common.ml  custom_argument.ml  default_argument.ml  dune  labeled_argument.ml  optional_argument.ml  sequence_argument.ml  subcommand.ml
real_world_ocaml/ch16_concurrent_programming/: ch16.ml  dune  echo_server.ml  query_duckduckgo.ml  simple_async.ml
real_world_ocaml/ch18_handling_json/: basic.ml  ch18.ml  construct_json.ml  dune  example_array_object.ml  example_nested_one.ml  example_optional_fields_default.ml
real_world_ocaml/ch19_parsing/: demo_parsing_json.ml  dune  parse_json.ml  parsing_binary.ml
real_world_ocaml/ch19_parsing/parsing_json/: dune  dune-project  lexer.mll  parser.mly
real_world_ocaml/ch20_s_exp/: basic.ml  custom.ml  dune
test/: dune
utils/: cmd.ml  dune  error.ml
